# claude-skills-mcp

./: IMPLEMENTATION_SUMMARY.md  LICENSE  PUBLISH_BACKEND_FIRST.md  README.md  READY_FOR_REVIEW.md  V1_IMPLEMENTATION_STATUS.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  architecture.md  migration-guide.md  publish-checklist.md  publishing.md  testing.md  usage.md  v1-release-notes.md
scripts/: build-all.sh  publish-all.sh  sync-version.py  test-local.sh
src/claude_skills_mcp/: __main__.py  config.py  server.py  skill_loader.py
tests/: test_config.py  test_document_loading.py  test_eda_skill_search.py  test_github_url_parsing.py  test_integration.py
tests/integration/: test_backend_http.py  test_full_flow.py  test_timing.py
