[project]
name = "claude-skills-mcp"
version = "0.1.0"
description = "MCP server for searching and retrieving Claude Agent Skills using vector search"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "ruff>=0.14.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
claude-skills-mcp = "claude_skills_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_skills_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=src/claude_skills_mcp --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
